# module-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
assets/: export.sh  icon.xcf  logo.xcf
examples/: Cargo.toml
examples/cargo/: base.toml  build.toml  config.toml  main.rs  tools.toml
examples/src/: lib.rs
examples/ssh/: config.toml  git.toml  main.rs  secure.toml  user-config.toml  user-config2.toml
module/: Cargo.toml
module-derive/: Cargo.toml
module-derive/src/: lib.rs  merge.rs
module-util/: Cargo.toml  README.md
module-util/src/: lib.rs
module-util/src/file/: file.rs  format.rs  json.rs  mod.rs  toml.rs  yaml.rs
module-util/tests/: test_file.rs  test_file_format_toml.rs  test_file_format_yaml.rs
module-util/tests/json/: cycle.json  cycle2.json  cycle2_1.json  relative_imports.json  simple1.json  simple2.json
module-util/tests/json/d1/: relative_imports3.json  relative_imports5.json
module-util/tests/json/d1/d2/: relative_imports2.json  relative_imports4.json
module-util/tests/toml/: simple1.toml  simple2.toml
module-util/tests/yaml/: simple1.yaml  simple2.yaml
module/src/: error.rs  lib.rs  merge.rs  overridable.rs  test.rs
module/src/error/: context.rs  mod.rs  modules.rs  trace.rs  value.rs
module/src/impls/: alloc.rs  core.rs  mod.rs  std.rs
module/src/merge/: cell.rs  context.rs  error.rs  iter.rs  mod.rs  tests.rs  trace.rs
module/src/merge/error/: context.rs  mod.rs  trace.rs
module/src/merge/impls/: alloc.rs  core.rs  mod.rs  std.rs
module/src/types/: first.rs  last.rs  lines.rs  mod.rs  no_merge.rs  ordered.rs  overridable.rs
module_derive/: Cargo.toml
