[workspace]
resolver = "2"
members = ["module", "module_derive"]
default-members = ["module"]

[workspace.lints.rust]
missing_docs = "warn"
arithmetic_overflow = "warn"
missing_debug_implementations = "warn"
unexpected_cfgs = "allow"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
cast_lossless = "warn"
cast_possible_wrap = "warn"
useless_conversion = "warn"
wrong_self_convention = "warn"
missing_assert_message = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"
new_without_default = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"

[workspace.lints.rustdoc]
all = "warn"
broken_intra_doc_links = "warn"
