[package]
name = "examples"
version = "0.0.0"
edition = "2024"
publish = false

[[example]]
name = "ssh"
path = "ssh/main.rs"

[[example]]
name = "cargo"
path = "cargo/main.rs"

[dependencies]
module = { path = "../module", features = ["derive", "serde"] }
module-util = { path = "../module-util", features = ["toml"] }
serde = { version = "1", features = ["derive"] }
toml = { version = "0.8" }
