[package]
name = "module-derive"
version = "0.0.0"
edition = "2024"
description = '''
Derive macros for the `module` crate.
'''
homepage = "https://github.com/threadexio/module-rs"
repository = "https://github.com/threadexio/module-rs"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1" }
syn = { version = "2" }
quote = { version = "1" }

[lints]
workspace = true
