[package]
name = "module-util"
version = "0.1.0"
authors = ["threadexio"]
edition = "2024"
description = '''
Utilities for working with module.
'''
documentation = "https://docs.rs/module-util"
readme = "README.md"
homepage = "https://github.com/threadexio/module-rs"
repository = "https://github.com/threadexio/module-rs"
license = "Apache-2.0"
keywords = ["module", "config", "nix"]
categories = ["command-line-utilities", "config", "no-std"]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "module_nightly"]
rustdoc-args = ["--cfg", "module_nightly"]

[dependencies]
module = { version = "0.1.0", features = ["std", "serde"], path = "../module" }
serde = { version = "1", features = ["derive"] }

serde_json = { version = "1", optional = true }
toml = { version = "0.8", optional = true }
serde_yaml = { version = "0.9", optional = true }

[dev-dependencies]
module = { version = "0.1.0", features = ["derive"], path = "../module" }

[features]
json = ["dep:serde_json"]
toml = ["dep:toml"]
yaml = ["dep:serde_yaml"]

default = ["json", "toml", "yaml"]

[lints]
workspace = true
