[package]
name = "module-util"
version = "0.1.1"
authors = ["threadexio"]
edition = "2024"
description = '''
Utilities for working with module.
'''
documentation = "https://docs.rs/module-util"
readme = "README.md"
homepage = "https://github.com/threadexio/module-rs"
repository = "https://github.com/threadexio/module-rs"
license = "Apache-2.0"
keywords = ["module", "config", "nix"]
categories = ["command-line-utilities", "config", "no-std"]
autotests = false

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "module_nightly"]
rustdoc-args = ["--cfg", "module_nightly"]

[dependencies]
module = { version = "0.2", features = ["std", "serde"], path = "../module" }
serde = { version = "1", features = ["derive"] }

serde_json = { version = "1", optional = true }
toml = { version = "0.8", optional = true }
serde_yaml = { version = "0.9", optional = true }

[dev-dependencies]
module = { version = "0.2", features = ["derive"], path = "../module" }

[features]
json = ["dep:serde_json"]
toml = ["dep:toml"]
yaml = ["dep:serde_yaml"]

default = []

[[test]]
name = "test_file"
path = "tests/test_file.rs"
required-features = ["json"]

[[test]]
name = "test_file_format_toml"
path = "tests/test_file_format_toml.rs"
required-features = ["toml"]

[[test]]
name = "test_file_format_yaml"
path = "tests/test_file_format_yaml.rs"
required-features = ["yaml"]

[lints]
workspace = true
